[tool.poetry]
name = "proxy"
version = "0.1.0"
description = ""
authors = ["Gabriel Sarmento <gabrielfs.bot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tornado = "^6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.isort]
atomic=true
line_length=79
multi_line_output=3
use_parentheses=true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
